[project]
name = "aie5-deploypythonicrag"
version = "0.1.0"
description = "Simple Pythonic RAG App"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit==2.0.4",
    "numpy==2.2.2",
    "openai==1.59.9",
    "pydantic==2.10.1",
    "pypdf2==3.0.1",
    "websockets==14.2",
    "langchain_core==0.1.45",
    "langchain_openai==0.0.8",
    "langchain_qdrant==0.1.0",
    "qdrant_client==1.7.4",
]
